--- a/labAlphabet.ipynb
+++ b/labAlphabet.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,27 +49,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "abcdefghijklmnopqrstuvwxyz\n",
-      "абвгдежзийклмнопрстуфхцчшщъыьэюя\n",
+      "a b c d e f g h i j k l m n o p q r s t u v w x y z\n",
+      "а б в г д е ж з и й к л м н о п р с т у ф х ц ч ш щ ъ ы ь э ю я\n",
       "\n",
-      "zyxwvutsrqponmlkjihgfedcba\n",
-      "яюэьыъщшчцхфутсрпонмлкйизжедгвба\n"
+      "z y x w v u t s r q p o n m l k j i h g f e d c b a\n",
+      "я ю э ь ы ъ щ ш ч ц х ф у т с р п о н м л к й и з ж е д г в б а\n"
      ]
     }
    ],
    "source": [
-    "print(eng_alf)\n",
-    "print(rus_alf)\n",
+    "print(' '.join(eng_alf))\n",
+    "print(' '.join(rus_alf))\n",
     "print()\n",
-    "print(eng_alf[::-1])\n",
-    "print(rus_alf[::-1])"
+    "print(' '.join(eng_alf[::-1]))\n",
+    "print(' '.join(rus_alf[::-1]))"
    ]
   },
   {
@@ -81,35 +81,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "абвгдежзийклмнопрстуфхцчшщъыьэюя\n",
-      "abcdefghijklmnopqrstuvwxyz\n",
-      "яюэьыъщшчцхфутсрпонмлкйизжедгвба\n",
-      "zyxwvutsrqponmlkjihgfedcba"
+      "а б в г д е ж з и й к л м н о п р с т у ф х ц ч ш щ ъ ы ь э ю я \n",
+      "a b c d e f g h i j k l m n o p q r s t u v w x y z \n",
+      "я ю э ь ы ъ щ ш ч ц х ф у т с р п о н м л к й и з ж е д г в б а \n",
+      "z y x w v u t s r q p o n m l k j i h g f e d c b a "
      ]
     }
    ],
    "source": [
     "for letter in rus_alf:\n",
-    "    print(letter,end='')\n",
+    "    print(letter,end=' ')\n",
     "print()\n",
     "\n",
     "for letter in eng_alf:\n",
-    "    print(letter,end='')\n",
+    "    print(letter,end=' ')\n",
     "print()\n",
     "\n",
     "for i in range(len(rus_alf)):\n",
-    "    print(rus_alf[len(rus_alf) - 1 - i],end='')\n",
+    "    print(rus_alf[len(rus_alf) - 1 - i],end=' ')\n",
     "print()\n",
     "\n",
     "for i in range(len(eng_alf)):\n",
-    "    print(eng_alf[len(eng_alf) - 1 - i],end='')"
+    "    print(eng_alf[len(eng_alf) - 1 - i],end=' ')"
    ]
   },
   {
@@ -121,24 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "абвгдежзийклмнопрстуфхцчшщъыьэюя\n",
-      "abcdefghijklmnopqrstuvwxyz\n",
+      "а б в г д е ж з и й к л м н о п р с т у ф х ц ч ш щ ъ ы ь э ю я\n",
+      "a b c d e f g h i j k l m n o p q r s t u v w x y z\n",
       "\n",
-      "яюэьыъщшчцхфутсрпонмлкйизжедгвба\n",
-      "zyxwvutsrqponmlkjihgfedcba\n"
+      "я ю э ь ы ъ щ ш ч ц х ф у т с р п о н м л к й и з ж е д г в б а\n",
+      "z y x w v u t s r q p o n m l k j i h g f e d c b a\n"
      ]
     }
    ],
    "source": [
-    "print(rus_alf)\n",
-    "print(eng_alf)\n",
+    "print(' '.join(rus_alf))\n",
+    "print(' '.join(eng_alf))\n",
     "print()\n",
     "lst_rus = list(rus_alf)\n",
     "lst_rus.reverse()\n",
@@ -146,8 +146,8 @@
     "lst_eng = list(eng_alf)\n",
     "lst_eng.reverse()\n",
     "\n",
-    "print(''.join(lst_rus))\n",
-    "print(''.join(lst_eng))"
+    "print(' '.join(lst_rus))\n",
+    "print(' '.join(lst_eng))"
    ]
   },
   {
@@ -159,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "абвгдежзийклмнопрстуфхцчшщъыьэюя\n",
+      "а б в г д е ж з и й к л м н о п р с т у ф х ц ч ш щ ъ ы ь э ю я \n",
       "abcdefghijklmnopqrstuvwxyz\n",
       "яюэьыъщшчцхфутсрпонмлкйизжедгвба\n",
       "zyxwvutsrqponmlkjihgfedcba\n"
@@ -174,20 +174,20 @@
     }
    ],
    "source": [
-    "for i in range(ord('а'), ord('а') + 32):\n",
-    "    print(chr(i),end='')\n",
+    "for i in range(ord('а'), ord('я') + 1):\n",
+    "    print(chr(i),end=' ')\n",
     "print()\n",
     "\n",
-    "for i in range(ord('a'), ord('a') + 26):\n",
-    "    print(chr(i),end='')\n",
+    "for i in range(ord('a'), ord('z') + 1):\n",
+    "    print(chr(i),end=' ')\n",
     "print()\n",
     "\n",
-    "for i in range(ord('а') + 31, ord('а') - 1, -1):\n",
-    "    print(chr(i),end='')\n",
+    "for i in range(ord('я'), ord('а') - 1, -1):\n",
+    "    print(chr(i),end=' ')\n",
     "print()\n",
     "\n",
-    "for i in range(ord('a') +25, ord('a') - 1, -1):\n",
-    "    print(chr(i),end='')\n",
+    "for i in range(ord('z'), ord('a') - 1, -1):\n",
+    "    print(chr(i),end=' ')\n",
     "print()"
    ]
   }
