--- a/labTOPFilesInDir.ipynb
+++ b/labTOPFilesInDir.ipynb
@@ -244,7 +244,7 @@
     "        ext_count = result[i][1]\n",
     "        percent = round(ext_count / len(file_ext),2) \n",
     "        result[i].append(percent)\n",
-    "    return table_for_ext(result, 'Расширение', 'Количесвто', 'Процент')[:count]"
+    "    return table_for_ext(result, 'Расширение', 'Количество', 'Процент')[:count]"
    ]
   },
   {
@@ -311,13 +311,6 @@
     "    sorted_dirs = sort_table(c,reversed=True)\n",
     "    return table_for_files(sorted_dirs, 'Директория', 'Количество поддиректорий')[:count]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1002,7 +995,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 (tags/v3.9.6:db3ff76, Jun 28 2021, 15:26:21) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
