--- a/labNumPy.ipynb
+++ b/labNumPy.ipynb
@@ -1,12 +1,600 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Линейная алгебра с NumPy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.20.1'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.__version__"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Вектор\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([10, 8, 5, 1])\n",
+    "b = np.array([5, 15, 9, 7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int32')"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = np.array([5,6,7,8],dtype=float)\n",
+    "c.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([15, 23, 14,  8])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5, -7, -4, -6])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a - b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20, 16, 10,  2])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a * 2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Матрица"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3],\n",
+       "       [ 4,  5,  6],\n",
+       "       [ 7,  8,  9],\n",
+       "       [10, 11, 12]])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = np.array([[1,2,3],[4,5,6],[7,8,9],[10,11,12]])\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 3)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d[0,0]=1\n",
+      "d[1,2]=6\n",
+      "d[2,1]=8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{d[0,0]=}\")\n",
+    "print(f\"{d[1,2]=}\")\n",
+    "print(f\"{d[2,1]=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[1, 2],\n",
+       "        [3, 4],\n",
+       "        [5, 6]])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 = np.matrix(\"1,2;3,4;5,6\")\n",
+    "m1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[-1, -3],\n",
+       "        [ 9,  7],\n",
+       "        [-5,  8]])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m2 = np.matrix(\"-1,-3;9,7;-5,8\")\n",
+    "m2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[ 0, -1],\n",
+       "        [12, 11],\n",
+       "        [ 0, 14]])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 + m2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[100, 200],\n",
+       "        [300, 400],\n",
+       "        [500, 600]])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[1, 3, 5],\n",
+       "        [2, 4, 6]])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3,4])\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#(1)\n",
+    "arr_sum = 0\n",
+    "for i in range(len(arr)):\n",
+    "    arr_sum += arr[i]\n",
+    "arr_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#(2)\n",
+    "arr_sum = 0\n",
+    "for i in arr:\n",
+    "    arr_sum += i\n",
+    "arr_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#(3)\n",
+    "arr_sum = arr.sum()\n",
+    "print(arr_sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.abs(arr)=array([1, 2, 3, 4])\n",
+      "np.sqrt(arr)=array([1.        ,        nan, 1.73205081,        nan])\n",
+      "np.modf(arr)=(array([ 0., -0.,  0., -0.]), array([ 1., -2.,  3., -4.]))\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_18676\\2533317530.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  print(f\"{np.sqrt(arr)=}\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1,-2,3,-4])\n",
+    "print(f\"{np.abs(arr)=}\")\n",
+    "print(f\"{np.sqrt(arr)=}\")\n",
+    "print(f\"{np.modf(arr)=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1,   2,   3,   4,   5,   6,   7,   8,   9],\n",
+       "       [  1,   4,   9,  16,  25,  36,  49,  64,  81],\n",
+       "       [  1,   8,  27,  64, 125, 216, 343, 512, 729]])"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [x for x in range(1,10)]\n",
+    "b = [x**2 for x in range(1,10)]\n",
+    "c = [x**3 for x in range(1,10)]\n",
+    "\n",
+    "m = np.array([a,b,c])\n",
+    "m"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Индексы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(10,20)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[1])\n",
+    "print(a[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, -1, 12, 13, 14, 15, 16, 17, 18, 19])"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[1] = -1\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 -1 -5 13 14 15 16 17 18 19]\n",
+      "[-1 -5 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = a[1:4] # создается представление, а НЕ копия\n",
+    "b[1] = -5\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 -1 -5  0  0  0  0 17 18 19]\n",
+      "[-99  -1 -99   0 -99   0 -99  17 -99  19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a[3:7] = 0\n",
+    "print(a)\n",
+    "a[::2] = -99\n",
+    "print(a)"
    ]
   },
   {
@@ -19,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +616,7 @@
        "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +661,7 @@
        "        True])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +681,7 @@
        "array([14, 15, 16, 17, 18, 19])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +701,7 @@
        "array([12, 13, 14, 15, 16, 17, 18])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,15 +712,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10  0 12  0 -1 -1  0 -1 -1 -1]\n",
-      "[10  0 12  0 -1 -1  0 -1 -1 -1]\n",
+      "[10 11 12 13 14 15 16 17 18 19]\n",
+      "[10 11 12 13 -1 -1 -1 -1 -1 -1]\n",
       "[10  0 12  0 -1 -1  0 -1 -1 -1]\n"
      ]
     }
@@ -155,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +753,7 @@
        "       17, 18, 19, 20, 21, 22, 23])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +781,7 @@
        "        [20, 21, 22, 23]]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +803,7 @@
        "       [12, 13, 14, 15]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +823,7 @@
        "array([12, 13, 14, 15])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +843,7 @@
        "13"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +878,7 @@
        "        [20, 21, 22, 23]]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +902,7 @@
        "        [20, 21, 22, 23]]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +924,7 @@
        "       [16, 17, 18, 19]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +946,7 @@
        "       [19]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +973,7 @@
        "        [20, 21, 22, 23]]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +1004,7 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +1027,7 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +1051,7 @@
        "        [3, 4, 5]]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +1077,7 @@
        "       [ 6,  7,  8]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +1100,7 @@
        "       [  6,   7,   8]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
