--- a/FinalProject/main.ipynb
+++ b/FinalProject/main.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object _walk at 0x0000017FA490F0B0>\n"
+      "<generator object _walk at 0x000001DCC03D2F90>\n"
      ]
     }
    ],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [64], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m \n\u001b[0;32m      3\u001b[0m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(\u001b[39m'\u001b[39m\u001b[39mtest.db\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m \u001b[39mprint\u001b[39m(os\u001b[39m.\u001b[39;49mstat(\u001b[39m'\u001b[39;49m\u001b[39mnew.pdf\u001b[39;49m\u001b[39m'\u001b[39;49m))\n",
+      "Cell \u001b[1;32mIn [3], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m \n\u001b[0;32m      3\u001b[0m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(\u001b[39m'\u001b[39m\u001b[39mtest.db\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m \u001b[39mprint\u001b[39m(os\u001b[39m.\u001b[39;49mstat(\u001b[39m'\u001b[39;49m\u001b[39mnew.pdf\u001b[39;49m\u001b[39m'\u001b[39;49m))\n",
       "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] Не удается найти указанный файл: 'new.pdf'"
      ]
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -274,6 +274,31 @@
     "from logger import Logger\n",
     "\n",
     "Logger.log(text,' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2023-01-17 16:23:50'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "import time\n",
+    "time.ctime()\n",
+    "#datetime.strptime('1673961830.631699',\"%a %b %d %H:%M:%S %Y\")\n",
+    "dt = datetime.fromtimestamp(1673961830.631699)\n",
+    "dt.strftime('%Y-%m-%d %H:%M:%S')"
    ]
   }
  ],
